--- a/index.html
+++ b/index.html
@@ -1083,15 +1083,22 @@ thead th, tbody td{ padding:.55rem .55rem; }
   justify-content: center;
 }
 
-/* Vertical gridlines only between numeric columns (P → Pts) */
+/* Center align numeric columns P → Pts in modal standings */
 #modal-standings th:nth-child(n+2):nth-child(-n+9),
 #modal-standings td:nth-child(n+2):nth-child(-n+9) {
-  border-right: 1px solid #e0e0e0;
+  text-align: center !important;     /* override .right */
+  display: table-cell;               /* reset any flex */
+  vertical-align: middle;            /* tidy vertical placement */
 }
 
-#modal-standings th:nth-child(9),
-#modal-standings td:nth-child(9) {
-  border-right: none; /* remove after Pts */
+
+/* Light row striping for readability in modal standings */
+#modal-standings tbody tr:nth-child(even) {
+  background-color: #fafafa;  /* subtle grey */
+}
+
+#modal-standings tbody tr:nth-child(odd) {
+  background-color: #ffffff;  /* keep odd rows clean */
 }
 
   
