--- a/index.html
+++ b/index.html
@@ -65,19 +65,25 @@
 <link rel="stylesheet" href="/css/app.css?v=7_3_3_fix12">
 
 <script>
-  if (new URLSearchParams(location.search).get('share') === '1') {
+  // Capture ?share=1 early before syncURL() strips it
+  window.__LGH_SHARE_ENABLED =
+    (new URLSearchParams(location.search).get('share') === '1');
+
+  // Load Share Card CSS + html2canvas only when share mode is enabled
+  if (window.__LGH_SHARE_ENABLED) {
     const l = document.createElement('link');
     l.rel = 'stylesheet';
     l.href = '/css/sharecard.css?v=7_3_3_fix12';
     document.head.appendChild(l);
+
+    window.__LGH_H2C_READY = false;
+
+  const s = document.createElement('script');
+  s.src = 'https://unpkg.com/html2canvas@1.4.1/dist/html2canvas.min.js';
+  s.onload = () => { window.__LGH_H2C_READY = true; };
+  s.onerror = () => { window.__LGH_H2C_READY = false; };
+  document.head.appendChild(s);
   }
-</script>
-
-
-<script>
-  // Capture ?share=1 early before syncURL() strips it
-  window.__LGH_SHARE_ENABLED =
-    (new URLSearchParams(location.search).get('share') === '1');
 </script>
 
 </head>
@@ -592,25 +598,17 @@ function updateSharebars(){
   </div>
 </div>
 
-<!-- html2canvas for PNG export -->
-<script src="https://unpkg.com/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
 <!-- LGH Share Card logic (self-contained; runs only when ?share=1) -->
 <script>
 (function(){
   // Robust gate: honor either ?share=1 or ?sc=1, OR the early-captured flag
-  const urlParams = new URLSearchParams(location.search);
-  const SHARE_ENABLED =
-    (window.__LGH_SHARE_ENABLED === true) ||
-    (urlParams.get('share') === '1') ||
-    (urlParams.get('sc') === '1');
-
+  const SHARE_ENABLED = (window.__LGH_SHARE_ENABLED === true);
   if (!SHARE_ENABLED) return;
 
-  // Use the same params instance below
-  const params = urlParams;
+  const params = new URLSearchParams(location.search);
 
- console.log('[LGH] Share Card enabled:', SHARE_ENABLED, location.search);
+  console.log('[LGH] Share Card enabled:', SHARE_ENABLED, location.search);
  
   // Helpers
   const q = sel => document.querySelector(sel);
@@ -976,7 +974,7 @@ q('#sc-footnote').hidden = false;
   }
 
   card.hidden = false;
-  q('#sc-download').disabled = false;
+  q('#sc-download').disabled = !(window.__LGH_H2C_READY === true);
   q('#sc-copycap').disabled = false;
 
   // Ensure footer text matches your constant
@@ -985,6 +983,10 @@ q('#sc-footnote').hidden = false;
 
 
   async function downloadPNG(){
+    if (typeof html2canvas !== 'function') {
+      alert('Share image engine is still loading. Try again in a second.');
+      return;
+    }
     const src = q('#share-card');
   
     // Clone outside the scrollable modal so nothing is clipped
@@ -1064,8 +1066,8 @@ q('#sc-footnote').hidden = false;
       navigator.clipboard.writeText(text).catch(()=>{});
     });
 
-    // Deep-link presets ?sc=1&mode=fixtures&preset=tomorrow&team=...&size=ig-portrait
-    if(params.get('share') === '1'){
+      // Deep-link presets ?share=1&mode=...
+      if(params.get('share') === '1'){
       openOverlay();
       if(params.get('mode')) form.mode.value = params.get('mode');
       if(params.get('preset')) form.preset.value = params.get('preset');
