Add colgroup to modal standings table

--- a/index.html
+++ b/index.html
@@ -278,7 +278,19 @@
     </div>
     <div class="table-wrap">
       <table id="modal-standings">
-        <thead>
+      <colgroup>
+        <col style="width:52%">
+        <col style="width:5%">
+        <col style="width:5%">
+        <col style="width:5%">
+        <col style="width:5%">
+        <col style="width:7%">
+        <col style="width:7%">
+        <col style="width:7%">
+        <col style="width:7%">
+      </colgroup>
+      <thead>
+
           <tr>
             <th>Team</th><th class="right">P</th><th class="right">W</th>
             <th class="right">D</th><th class="right">L</th>
