Refactor standings table with colgroup and improved structure

--- a/index.html
+++ b/index.html
@@ -158,11 +158,27 @@
           <button class="iconbtn" id="btn-expand"><i class="fa-solid fa-up-right-and-down-left-from-center"></i> Expand</button>
         </div>
         <div class="table-wrap">
-          <table id="g-standings-table">
-            <thead>
-              <tr><th>Team</th><th class="right">P</th><th class="right">W</th><th class="right">D</th><th class="right">L</th><th class="right">Pts</th></tr>
-            </thead><tbody></tbody>
-          </table>
+        <table id="g-standings-table">
+          <colgroup>
+            <col style="width:56%">
+            <col style="width:8%">
+            <col style="width:8%">
+            <col style="width:8%">
+            <col style="width:8%">
+            <col style="width:12%">
+          </colgroup>
+          <thead>
+            <tr>
+              <th>Team</th>
+              <th class="right">P</th>
+              <th class="right">W</th>
+              <th class="right">D</th>
+              <th class="right">L</th>
+              <th class="right">Pts</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
         </div>
       </div>
 
