Adjust column widths in g-standings-table

--- a/index.html
+++ b/index.html
@@ -160,12 +160,9 @@
         <div class="table-wrap">
         <table id="g-standings-table">
           <colgroup>
-            <col style="width:56%">
-            <col style="width:8%">
-            <col style="width:8%">
-            <col style="width:8%">
-            <col style="width:8%">
-            <col style="width:12%">
+            <col style="width:44%">
+            <col style="width:6%"><col style="width:6%"><col style="width:6%"><col style="width:6%">
+            <col style="width:8%"><col style="width:8%"><col style="width:8%"><col style="width:8%">
           </colgroup>
           <thead>
             <tr>
