--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <!-- Hurling -->
   <div id="panel-hurling" class="card">
     <div class="section-tabs view-tabs" id="view-tabs">
-      <div class="seg vt active" data-target="group-panel" id="comp-tab">Competition <i class="fa-solid fa-chevron-down" style="font-size:12px; margin-left:6px;"></i></div>
+      <div class="seg vt active" data-target="group-panel" id="comp-tab">Competition</div>
       <div class="seg vt" data-target="by-team">Club</div>
       <div class="seg vt" data-target="by-date">Date</div>
     </div>
