--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
   <footer class="site-footer">Limerick GAA Hub · 2025</footer>
 
   <!-- JS -->
-  <script src="/js/app_v7_3_3.fix12.js" defer></script>
+  <script src="/js/app_v14.js" defer></script>
   <script>
     // Inline logger to confirm flags at load
     window.addEventListener('load', () => {
