--- a/index.html
+++ b/index.html
@@ -113,18 +113,17 @@
     </div>
   </div>
 
-    <!-- Mobile sport selector (single pill) -->
-  <div class="sportbar card" id="sportbar">
-    <button class="sportpill" id="sportpill" type="button" aria-haspopup="menu" aria-expanded="false">
-      <span id="sportpill-label">Hurling</span>
-      <i class="fa-solid fa-chevron-down" aria-hidden="true"></i>
-    </button>
+  <!-- Mobile sport selector (segmented toggle) -->
+  <div class="sportbar" id="sportbar" aria-label="Sport selector">
+    <div class="sportseg" role="tablist" aria-label="Choose sport">
+      <button class="sportseg-btn active" type="button" data-sport="hurling" aria-pressed="true">
+        Hurling
+      </button>
+      <button class="sportseg-btn" type="button" data-sport="football" aria-pressed="false">
+        Football
+      </button>
+    </div>
   </div>
-  <div class="menu" id="sport-menu" role="menu" aria-hidden="true">
-    <div class="item" data-sport="hurling">Hurling</div>
-    <div class="item" data-sport="football">Football</div>
-  </div>
-
 
   <!-- Hurling -->
   <div id="panel-hurling" class="card">
