--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <!-- New: Matches dropdown menu -->
     <div class="menu" id="matches-menu" role="menu" aria-hidden="true"></div>
 
-      <div class="controls card" id="controls-matches"> style="display:none;">
+      <div class="controls card" id="controls-matches" style="display:none;">
   <label for="status" class="sr-only">Show</label>
   <div class="pretty-select">
     <select id="status">
