--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 <title>Limerick GAA Hub</title>
 <meta name="color-scheme" content="light only">
 
+  <!-- PWA -->
+  <link rel="manifest" href="/manifest.webmanifest">
+  <meta name="theme-color" content="#006B3C">
+  <link rel="apple-touch-icon" href="/icons/icon-192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="Limerick GAA Hub">
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-BW8JCZRZHV"></script>
   <script>
@@ -110,6 +118,10 @@
       <div class="oc-link" data-nav="hurling">Hurling</div>
       <div class="oc-link" data-nav="football">Football</div>
       <div class="oc-link" data-nav="about">About</div>
+
+      <button id="a2hs-btn" class="menu-item">
+        Add to Home Screen
+      </button>
     </div>
   </div>
 
