--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
       <div class="navtabs">
         <div class="navtab active" data-nav="hurling">Hurling</div>
         <div class="navtab" data-nav="football">Football</div>
+        <div class="navtab" data-nav="archive">Archive</div>
         <div class="navtab" data-nav="about">About</div>
       </div>
       <button class="burger" id="burger" aria-label="Open menu"><i class="fa-solid fa-bars"></i></button>
