Update CSS and JS file versions in index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
 
-<link rel="stylesheet" href="/css/app.css?v=7_3_3_fix12">
+<link rel="stylesheet" href="/css/app.css?v=20260215a">
 
 <script>
   // Capture ?share=1 early before syncURL() strips it
@@ -394,7 +394,7 @@
   <footer class="site-footer">Limerick GAA Hub · 2025</footer>
 
   <!-- JS -->
-  <script src="/js/app_v14.js" defer></script>
+  <script src="/js/app_v14.js?v=20260215" defer></script>
   <script>
     // Inline logger to confirm flags at load
     window.addEventListener('load', () => {
